--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "next": "10.0.3",
-    "postcss": "7",
+    "postcss": "^7",
     "react": "17.0.1",
     "react-content-loader": "^5.1.4",
     "react-dom": "17.0.1"
@@ -23,7 +23,7 @@
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "autoprefixer": "7",
+    "autoprefixer": "^7",
     "babel-jest": "^26.6.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -37,7 +37,7 @@
     "jest": "^26.6.3",
     "lodash.uniq": "^4.5.0",
     "node-mocks-http": "^1.9.0",
-    "postcss-flexbugs-fixes": "4",
+    "postcss-flexbugs-fixes": "^4",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.0.1-compat"
