--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9.8.6",
     "next": "10.0.3",
-    "postcss": "^7",
+    "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-content-loader": "^5.1.4",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -23,7 +26,6 @@
     "@fullhuman/postcss-purgecss": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "autoprefixer": "^7",
     "babel-jest": "^26.6.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -39,7 +41,6 @@
     "node-mocks-http": "^1.9.0",
     "postcss-flexbugs-fixes": "^4",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.1-compat"
+    "prettier": "^2.2.1"
   }
 }
